--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "express-server",
+  "name": "limitless-server",
   "version": "1.0.0",
   "description": "scaffold for express server",
   "main": "./server/server.ts",
@@ -7,24 +7,32 @@
     "start": "node dist/server/server.js",
     "dev": "nodemon --watch 'server/**/*.ts' --exec ts-node server/server.ts",
     "build": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "db:generate": "drizzle-kit generate",
+    "db:push": "drizzle-kit push",
+    "db:migrate": "drizzle-kit migrate"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
     "cors": "^2.8.5",
-    "dotenv": "^16.4.7",
+    "dotenv": "^16.6.1",
+    "drizzle-orm": "^0.44.4",
+    "drizzle-zod": "^0.8.2",
     "express": "^4.21.2",
     "express-rate-limit": "^7.4.1",
     "http-status-codes": "^2.3.0",
+    "postgres": "^3.4.7",
     "zod": "^3.24.1"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.2",
+    "drizzle-kit": "^0.31.4",
     "nodemon": "^3.1.7",
     "ts-node": "^10.9.2",
+    "tsx": "^4.20.3",
     "typescript": "^5.7.2"
   }
 }
