--- a/package.json
+++ b/package.json
@@ -15,14 +15,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@privy-io/server-auth": "^1.29.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
     "drizzle-orm": "^0.44.4",
     "drizzle-zod": "^0.8.2",
+    "ethers": "^6.15.0",
     "express": "^4.21.2",
     "express-rate-limit": "^7.4.1",
     "http-status-codes": "^2.3.0",
     "postgres": "^3.4.7",
+    "viem": "^2.33.2",
     "zod": "^3.24.1"
   },
   "devDependencies": {
