feat: added langchain and ai responses on create message route

--- a/.env.example
+++ b/.env.example
@@ -9,5 +9,11 @@ FRONTEND_URL=http://localhost:5173
 PRIVY_APP_ID=your_privy_app_id_here
 PRIVY_APP_SECRET=your_privy_app_secret_here
 
+# OpenAI Configuration (Required for AI features)
+OPENAI_API_KEY=your_openai_api_key_here
+
+# 1inch API Configuration (Required for DeFi features)
+ONEINCH_API_KEY=your_1inch_api_key_here
+
 # Server Configuration
 PORT=3000
