--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@langchain/core": "^0.3.66",
+    "@langchain/openai": "^0.6.3",
     "@privy-io/server-auth": "^1.29.0",
     "cors": "^2.8.5",
     "dotenv": "^16.6.1",
@@ -24,6 +26,7 @@
     "express": "^4.21.2",
     "express-rate-limit": "^7.4.1",
     "http-status-codes": "^2.3.0",
+    "langchain": "^0.3.30",
     "postgres": "^3.4.7",
     "viem": "^2.33.2",
     "zod": "^3.24.1"
