--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "langchain": "^0.3.30",
     "postgres": "^3.4.7",
     "viem": "^2.33.2",
-    "zod": "^3.24.1"
+    "zod": "3.25.67"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
